--- a/custom_components/myradar/manifest.json
+++ b/custom_components/myradar/manifest.json
@@ -1,8 +1,8 @@
 {
   "domain": "myradar",
   "name": "MyRadar",
-  "documentation": "https://github.com/alexander0042/pirate-weather-ha",
-  "issue_tracker": "https://github.com/alexander0042/pirate-weather-ha/issues",
+  "documentation": "https://github.com/bittles/myradar-ha",
+  "issue_tracker": "https://github.com/bittles/myradar-ha/issues",
   "dependencies": [],
   "version": "0.1.0",  
   "requirements": ["python-forecastio==1.4.0"],
